fix printing layout problem for resume page

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -134,6 +134,24 @@
   }
 }
 
+@media (max-width: 550px) {
+  .content--resume .item__heading {
+    position: relative;
+    flex-flow: column nowrap;
+  }
+
+  .content--resume .item__heading .item__field:first-child {
+    font-weight: 600;
+  }
+
+  .content--resume .item__heading .item__field:last-child {
+    position: absolute;
+    display: inline-block;
+    max-width: 50%;
+    right: 0;
+  }
+}
+
 @media (max-width: 735px) {
   body {
     font-size: 14px;
@@ -246,23 +264,6 @@
 
   .content--resume {
     padding-top: 0;
-  }
-
-
-  .content--resume .item__heading {
-    position: relative;
-    flex-flow: column nowrap;
-  }
-
-  .content--resume .item__heading .item__field:first-child {
-    font-weight: 600;
-  }
-
-  .content--resume .item__heading .item__field:last-child {
-    position: absolute;
-    display: inline-block;
-    max-width: 50%;
-    right: 0;
   }
 
   .footer {
